# anchor-basic-adder

./: Anchor.toml  README.md
programs/anchor-basic-adder/: Cargo.toml
programs/anchor-basic-adder/src/: constants.rs  lib.rs  utils.rs
programs/anchor-basic-adder/src/instructions/: add.rs  double.rs  mod.rs
programs/anchor-basic-adder/src/state/: counter.rs
programs/anchor-basic-adder/src/stubs/: add_stub.rs  double_stub.rs  mod.rs
tests/: constants.ts
tests/anchor-basic-adder/: anchor-basic-adder-test.ts
